--- a/A Soilder Story/Assembly-CSharp-Editor.csproj
+++ b/A Soilder Story/Assembly-CSharp-Editor.csproj
@@ -141,13 +141,13 @@
  <HintPath>E:/SiYuen/Unity/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
  </Reference>
  <Reference Include="LitJson">
- <HintPath>E:/SiYuen/小兵的故事/A Soilder Story/Assets/Plugins/LitJson.dll</HintPath>
+ <HintPath>E:/SiYuen/Github/Solider-Story/A Soilder Story/Assets/Plugins/LitJson.dll</HintPath>
  </Reference>
  <Reference Include="DOTween">
- <HintPath>E:/SiYuen/小兵的故事/A Soilder Story/Assets/Plugins/DOTween/DOTween.dll</HintPath>
+ <HintPath>E:/SiYuen/Github/Solider-Story/A Soilder Story/Assets/Plugins/DOTween/DOTween.dll</HintPath>
  </Reference>
  <Reference Include="DOTweenEditor">
- <HintPath>E:/SiYuen/小兵的故事/A Soilder Story/Assets/Plugins/DOTween/Editor/DOTweenEditor.dll</HintPath>
+ <HintPath>E:/SiYuen/Github/Solider-Story/A Soilder Story/Assets/Plugins/DOTween/Editor/DOTweenEditor.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
